--- a/talks.yml
+++ b/talks.yml
@@ -1,4 +1,10 @@
 talks: 
+  - title:        "Intro to Apache Spark with Frameless"
+    speaker:      Brian Clapper
+    date:         2018/12/06
+    meeting_link: https://www.meetup.com/scala-phase/events/256236416/
+    code:         https://github.com/bmc/spark-frameless-talk-2018
+    video:        https://www.youtube.com/watch?v=zXipqCcVmQM
   - title:        "Flexible DSLs with Tagless Final"
     speaker:      Dan Hunt
     date:         2018/07/13
