--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 exclude: [Rakefile, Gemfile, Gemfile.lock, less, dist, talks.yml, talks.mustache, tmp, README.md]
-include: [scala-fundamentals, talks, assets, css, images]
+include: [fundamentals, talks, assets, css, images]
