--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 exclude: [Rakefile, Gemfile, Gemfile.lock, less, dist, talks.yml, talks.mustache, tmp, README.md, .idea, scala-phase.github.io.iml]
 include: [fundamentals, talks, assets, css, images]
+plugins:
+  - jekyll-github-metadata
+  - jekyll-mentions
+  - jekyll-redirect-from
+  - jekyll-sitemap
+  - jemoji
